# tiny16

./: .svlint.toml  README.md  makefile  shell.nix
doc/: ABI.md  ISA.md
fasmg/: makefile  mif.py
fasmg/src/: calc.t16s  hello_fpga.t16s  hello_world.t16s  hello_world_printf.t16s  miku.t16s  miku.txt  minesweeper.t16s  random_test.t16s
fasmg/src/lib/: console.t16inc  debug_map.inc  listing2.inc  math.t16inc  printf.t16inc  tiny16.t16inc
t16emu/: Cargo.toml
t16emu/src/: emulator.rs  main.rs  memory.rs
t16emu/src/devices/: gpu.rs  mod.rs  wgpu.rs  xterm-solarized.txt  xterm.rs
t16q/: .gitignore  makefile  tiny16.qpf  tiny16.qsf  tiny16_assignment_defaults.qdf
t16q/output_files/: tiny16.cdf
t16q/simulation/modelsim/: tiny16.vo  tiny16_modelsim.xrf
t16q/src/: DE10_LITE_Golden_Top.sv  clockpll.ppf  clockpll.qip  clockpll.v  clockpll_bb.v  ram.v  ram_bb.v  rom-init.mif  rom.qip  rom.v  rom_bb.v  uart_fifo.qip  uart_fifo.v  uart_fifo_bb.v
t16q/src/core/: alu.sv  clock.sv  core.sv  decode.sv  gpu.sv  mmu.sv  registers.sv  sevenseg.sv  uart.sv
t16vl/: .gitignore  README.md  istyle.nix  iverilog.nix  makefile
t16vl/src/: alu.sv  core.sv  main.sv  mmu.sv
vsc-ext/: CHANGELOG.md  README.md  package.json  snippets.json  vsc-extension-quickstart.md
vsc-ext/syntaxes/: tiny16asm.tmLanguage.json
