[package]
name = "t16emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
byteorder = "1.4.3"
colored = "2.0.0"
crossterm = "0.26.1"
ctrlc = "3.2.5"
nix = "0.26.2"
oneshot = "0.1.5"
rand = "0.8.5"
softbuffer = "0.2.0"
winit = "0.28.6"
